hard-gists/1810707/run.log
=== Docker Run Log for 1810707 ===
Started at: Mi 29. Okt 12:29:57 CET 2025

[2025-10-29 12:29:58] START: Running container for 1810707
[2025-10-29 12:29:58] SUCCESS: Container 491b71dd46fb13488a61fe4010edec708408fa70cc585830c0831b704ee7e05d started for 1810707
=== Container logs for 1810707 ===
  File "/snippet.py", line 28
    print get(2010)
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1810707 ===
[2025-10-29 12:30:00] INFO: Container 491b71dd46fb13488a61fe4010edec708408fa70cc585830c0831b704ee7e05d has stopped
